<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/company"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundedImageView2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/mgs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCompany"

        app:riv_oval="true" />

    <TextView
        android:id="@+id/textViewCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/mgs_software"
        android:textColor="#1C1A1A"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
        app:layout_constraintTop_toTopOf="@+id/roundedImageView2" />

    <TextView
        android:id="@+id/textViewMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/member"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textViewCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompanyName" />

    <ImageView
        android:id="@+id/imageViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/black"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundedImageView2" />

    <TextView
        android:id="@+id/textViewMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Members"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/line"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMember"
        tools:listitem="@layout/item_person" />


</androidx.constraintlayout.widget.ConstraintLayout>